fix side overflow

--- a/css/common.css
+++ b/css/common.css
@@ -272,7 +272,7 @@ footer {
         background-color: #333333;
         z-index: 100;
         opacity: 0.97;
-        overflow: scroll;
+        overflow: auto;
     }
     header .wrap .wrapList>li {
         display: block;
